# Ruliology-Forge

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: first_issues.md  methods.md  project_plan.md
examples/: quickstart_rule110.py  scan_all_rules.py
src/ruliology_forge/: __init__.py  analysis.py  benchmarks.py  cli.py  eca.py  experiments.py  metrics.py  perturb.py  plotting.py
tests/: test_analysis.py  test_benchmarks.py  test_eca.py  test_experiments.py  test_metrics.py
